media/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: prowlarr.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: prowlarr
            port: 
              name: http
  tls:
    - hosts:
        - prowlarr.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
